# rh-vc2026-communication

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  CONTRIBUTING.md  Cargo.toml  DISCORD_BOT_SETUP.md  Dockerfile  README.md  api-spec.md  docker-compose.full.yml  docker-compose.snippet.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
crashkurs/: agentic-coding-ablauf.md  prompts.md  setup.md
docs/: project-context.md  team-structure.md
docs/archive/openboard-mvp/: README.md  app-spec.md  demo-flow.md  (+1 more)
docs/team-1/: architecture.md  database.md  design-guide.md  evals.md  fix-list-make-module-usable.md  fix-prompt-next-chat.md  glossary.md  group-notes.md  handoff-current-status.md  implementation-plan.md  index.md  roadmap.md  ui-brief.md
evals/: team-1-kommunikation.json
frontend/: .gitignore  base.css  custom-styles.css  eslint.config.js  index.html  network.js  nginx.conf  package-lock.json  package.json  readme.md  script.js  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  api.ts  index.css
hackathon-collaboration-system/: custom-styles.css  index.html  network.js  readme.md  script.js
migrations/: 202606170001_team1_kommunikation.sql  202606170002_demo_seed.sql
src/: bot.js  config.ts  db.rs  error.rs  lib.rs  main.rs  models.rs  openapi.ts  request_json.rs  routes.rs  seed.rs  server.ts  state.rs
src/auth/: jwtMiddleware.ts  membershipProvider.ts
src/db/: migrate.ts  pool.ts  schema.sql
src/files/: repository.ts  routes.ts  storage.ts  uploadService.ts
styles/: Stylesheet.css
(+36 files in other folders)
