[package]
name = "team1-kommunikation"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["json", "macros", "migrate", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
utoipa = "5"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
